--- a/.github/workflows/repogent.yml
+++ b/.github/workflows/repogent.yml
@@ -12,6 +12,5 @@ jobs:
       - name: Run Repogent
         uses: vijayabhaskar78/Repogent@main
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          openai_api_key: ${{ secrets.OPENAI_API_KEY }}
-
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          groq-key: ${{ secrets.GROQ_API_KEY }}
